Fixed grid item height stretching

--- a/css/page-elements/grid.css
+++ b/css/page-elements/grid.css
@@ -3,8 +3,9 @@
 
 /* Grid section */
 .grid{display:flex;flex-direction:row;flex-wrap:wrap;justify-content:space-between;margin:2em 0 0}
-.grid li{display:block;background-color:rgba(255,255,255,1);padding:1em;width:12em;margin-bottom:1em;border:1px solid rgba(56,163,221,0.1)}
+.grid li{display:block;background-color:rgba(255,255,255,1);padding:1em;width:13em;margin-bottom:1em;border:1px solid rgba(56,163,221,0.1)}
 .grid li:hover{background-color:rgba(56,163,221,0.2)}
+.grid a {display: flex;}
 .grid a,.grid a:hover{text-decoration:none}
 .grid .title{font-weight:600}
 .grid .author{color:rgba(0,0,0,1)}
